--- a/public/styles/searchoverlay.css
+++ b/public/styles/searchoverlay.css
@@ -55,5 +55,6 @@
 }
 
 .search-row:hover {
-  background-color: #710505;
+  /* background-color: #710505; */
+  background-color: rgba(207, 57, 53, 0.3);
 }
